2013-12-26  Sean Connor  <sconnor005@allyinics.org>  (tiny change)

	* gnus-sum.el (gnus-summary-enter-digest-group): Don't discard previous
	value of the parameters if the current article has a Reply-To or From
	field.

2013-12-26  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus.el (gnus-group-buffer): Remove duplicate definition.

2013-12-25  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-exit): Stop animations.

2013-12-19  Juri Linkov  <juri@jurta.org>

	* gnus.el (gnus-suppress-keymap):
	* gnus-art.el (gnus-article-mode-map):
	* gnus-group.el (gnus-group-mode-map):
	* gnus-sum.el (gnus-summary-mode-map, gnus-summary-backend-map):
	Remove [backspace] key binding because it shadows DEL (bug#16035).

	* mm-decode.el (mm-viewer-completion-map): Remove duplicate definition.

2013-12-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-uu.el (gnus-uu-decode-binhex, gnus-uu-decode-binhex-view):
	Make sure work directory exists.
	(gnus-uu-digest-mail-forward): Store temporary files in work directory
	rather than tmp directory.
	(gnus-summary-prepare-exit-hook): Replace gnus-exit-group-hook, that is
	not necessarily always run, with it.

2013-12-18  Jan Tatarik  <jan.tatarik@gmail.com>

	* gnus-icalendar.el (gnus-icalendar-identities): Make changing the
	value of gnus-icalendar-additional-identities work without restart.

2013-12-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-make-temp-file):
	Alias to make-temp-file for modern Emacsen.

2013-12-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-setup-message): Fix the type of argument passed to
	nnir-article-number and nnir-article-group.

2013-12-03  Vitalie Spinu  <spinuvit@gmail.com>

	* message.el (message-send-mail-with-sendmail):
	Don't kill error buffer if sending fails.

2013-11-28  Jan Tatarik  <jan.tatarik@gmail.com>

	* gnus-icalendar.el (gnus-icalendar-event-from-ical)
	(gnus-icalendar-event->org-entry)
	(gnus-icalendar--update-org-event)